[gd_scene load_steps=17 format=2]

[ext_resource path="res://Transitions/Assets/Fade.tscn" type="PackedScene" id=1]
[ext_resource path="res://Static/Assets/Static.tscn" type="PackedScene" id=2]
[ext_resource path="res://FNaF 1/624.png" type="Texture" id=3]
[ext_resource path="res://Development menu/Assets/Development Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Development menu/Scripts/Developer Menu.gd" type="Script" id=5]
[ext_resource path="res://FNaF 1/625.png" type="Texture" id=6]
[ext_resource path="res://Development menu/Assets/Checkbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://FNaF 1/626.png" type="Texture" id=8]
[ext_resource path="res://FNaF 1/627.png" type="Texture" id=9]
[ext_resource path="res://FNaF 1/628.png" type="Texture" id=10]
[ext_resource path="res://FNaF 1/631.png" type="Texture" id=11]
[ext_resource path="res://FNaF 1/632.png" type="Texture" id=12]
[ext_resource path="res://Development menu/Assets/Button.tscn" type="PackedScene" id=13]
[ext_resource path="res://Font/Volter__28Goldfish_29.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://FNaF 1/633.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 14 )

[node name="Developer Menu" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Static" parent="." instance=ExtResource( 2 )]

[node name="Fade" parent="." instance=ExtResource( 1 )]

[node name="Cheats Button" parent="." instance=ExtResource( 4 )]
position = Vector2( 141, 67 )
scale = Vector2( 0.7, 0.7 )

[node name="Beta Content Button" parent="." instance=ExtResource( 4 )]
position = Vector2( 141, 151 )
scale = Vector2( 0.7, 0.7 )

[node name="Sprite" parent="Beta Content Button" index="0"]
position = Vector2( 112.857, -1.42857 )
texture = ExtResource( 3 )

[node name="Button" parent="Beta Content Button" index="2"]
margin_right = 340.0

[node name="Return to menu" parent="." instance=ExtResource( 4 )]
position = Vector2( 1003, 688 )
scale = Vector2( 0.7, 0.7 )

[node name="Sprite" parent="Return to menu" index="0"]
position = Vector2( 112.857, -1.42857 )
texture = ExtResource( 11 )

[node name="Arrow" parent="Return to menu" index="1"]
position = Vector2( -202.857, -10 )

[node name="Button" parent="Return to menu" index="2"]
margin_left = -167.0
margin_right = 387.0

[node name="Cheats" type="Node2D" parent="."]
position = Vector2( 54.2, 126.5 )
scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="Sprite" parent="Cheats"]
position = Vector2( 189.714, 135 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Cheats"]
position = Vector2( 308.286, 217.857 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="Radar" parent="Cheats" instance=ExtResource( 7 )]
position = Vector2( 399.714, 133.571 )
scale = Vector2( 0.15, 0.15 )

[node name="Infinite Power" parent="Cheats" instance=ExtResource( 7 )]
position = Vector2( 625.428, 217.857 )
scale = Vector2( 0.15, 0.15 )

[node name="Sprite 3" type="Sprite" parent="Cheats"]
position = Vector2( 148.286, 326.429 )
scale = Vector2( 0.857143, 0.857143 )
texture = ExtResource( 12 )

[node name="Sprite 4" type="Sprite" parent="Cheats"]
position = Vector2( 602.571, 479.286 )
scale = Vector2( 0.857143, 0.857143 )
texture = ExtResource( 15 )

[node name="Add to night" parent="Cheats" instance=ExtResource( 13 )]
position = Vector2( 315.429, 280.714 )
scale = Vector2( 0.15, 0.15 )

[node name="Add to beatgame" parent="Cheats" instance=ExtResource( 13 )]
position = Vector2( 1232.57, 425 )
scale = Vector2( 0.15, 0.15 )

[node name="Subtract from night" parent="Cheats" instance=ExtResource( 13 )]
position = Vector2( 316.857, 373.571 )
rotation = 3.14159
scale = Vector2( 0.15, 0.15 )

[node name="Subtract from beatgame" parent="Cheats" instance=ExtResource( 13 )]
position = Vector2( 1234, 527.857 )
rotation = 3.14159
scale = Vector2( 0.15, 0.15 )

[node name="Night String" type="Label" parent="Cheats"]
margin_left = 308.286
margin_top = 302.143
margin_right = 348.286
margin_bottom = 419.143
custom_fonts/font = SubResource( 1 )

[node name="Beatgame String" type="Label" parent="Cheats"]
margin_left = 1225.43
margin_top = 452.143
margin_right = 1265.43
margin_bottom = 569.143
custom_fonts/font = SubResource( 1 )

[node name="Beta" type="Node2D" parent="."]
position = Vector2( 30, 21 )

[node name="Sprite" type="Sprite" parent="Beta"]
position = Vector2( 303, 200 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Old Cameras" parent="Beta" instance=ExtResource( 7 )]
position = Vector2( 611, 197 )
scale = Vector2( 0.1, 0.1 )

[node name="Sprite2" type="Sprite" parent="Beta"]
position = Vector2( 234, 258 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 10 )

[node name="Lives" parent="Beta" instance=ExtResource( 7 )]
position = Vector2( 475, 258 )
scale = Vector2( 0.1, 0.1 )

[connection signal="pressed" from="Cheats Button/Button" to="." method="_on_cheats_pressed"]
[connection signal="pressed" from="Beta Content Button/Button" to="." method="_on_beta_pressed"]
[connection signal="pressed" from="Return to menu/Button" to="." method="_on_return_to_menu"]
[connection signal="pressed" from="Cheats/Add to night/Button" to="." method="_on_add_to_night"]
[connection signal="pressed" from="Cheats/Add to beatgame/Button" to="." method="_on_add_to_beatgame"]
[connection signal="pressed" from="Cheats/Subtract from night/Button" to="." method="_on_subtract_from_night"]
[connection signal="pressed" from="Cheats/Subtract from beatgame/Button" to="." method="_on_subtract_from_beatgame"]

[editable path="Cheats Button"]
[editable path="Beta Content Button"]
[editable path="Return to menu"]
[editable path="Cheats/Add to night"]
[editable path="Cheats/Add to beatgame"]
[editable path="Cheats/Subtract from night"]
[editable path="Cheats/Subtract from beatgame"]
